# TransradialElectromyographicProsthesis

./: .clang-format  .gitignore  CMakeLists.txt  README.md  signal_gen.py
amplifier/firmware/: .cproject  .mxproject  .project  emg_amplifier.ioc
bridge/: CMakeLists.txt  emg_sensor_array.ino
bridge/firmware/: firmware.ino
bridge/logger/: .gitignore  CMakeLists.txt  annotation.py  convert.py  main.py  recorder.py  sensor.py
bridge/logger/data/fist/: finger_state.npy  finger_state_cropped.npy  muscle_data.npy  muscle_data_cropped_normalized.npy  muscle_data_normalized.npy  x.txt
bridge/logger/data/index_duo/: finger_state.npy  muscle_data.npy  muscle_data_cropped.npy  muscle_data_cropped_normalized.npy  muscle_data_normalized.npy  x.txt
bridge/logger/data/index_duo_press/: finger_state.npy  muscle_data.npy  muscle_data_cropped_normalized.npy  muscle_data_normalized.npy  x.txt
bridge/logger/data/middle_duo/: finger_state.npy  finger_state_cropped.npy  muscle_data.npy  muscle_data_cropped_normalized.npy  muscle_data_normalized.npy
bridge/logger/data/middle_duo_press/: finger_state.npy  finger_state_cropped.npy  muscle_data.npy  muscle_data_cropped.npy  muscle_data_cropped_normalized.npy  muscle_data_normalized.npy
bridge/logger/data/piano/: finger_state.npy  muscle_data.npy
bridge/logger/data/piano_twinkle/: finger_state.npy  muscle_data.npy  muscle_data_cropped_normalized.npy  muscle_data_normalized.npy  x.txt
bridge/logger/data/pickup_ball/: finger_state.npy  muscle_data.npy
bridge/logger/data/pickup_ball_palm/: finger_state.npy  muscle_data.npy  muscle_data_cropped.npy  muscle_data_cropped_normalized.npy  muscle_data_normalized.npy
bridge/logger/data/pinkie_duo/: finger_state.npy  finger_state_cropped.npy  muscle_data.npy  muscle_data_cropped.npy  muscle_data_cropped_normalized.npy  muscle_data_normalized.npy  x.txt
bridge/logger/data/pinkie_duo_press/: finger_state.npy  muscle_data.npy  muscle_data_cropped_normalized.npy  muscle_data_normalized.npy  x.txt
bridge/logger/data/ring_duo_press/: finger_state.npy  finger_state_cropped.npy  muscle_data.npy  muscle_data_cropped.npy  muscle_data_cropped_normalized.npy  muscle_data_normalized.npy  x.txt
bridge/logger/data/solo_finger/: finger_state.npy  finger_state_cropped.npy  muscle_data.npy  muscle_data_cropped.npy  muscle_data_cropped_normalized.npy  muscle_data_normalized.npy  x.txt
bridge/logger/data/solo_finger_press/: finger_state.npy  finger_state_cropped.npy  muscle_data.npy  muscle_data_cropped_normalized.npy  muscle_data_normalized.npy  x.txt
bridge/logger/data/throw_ball/: finger_state.npy  muscle_data.npy
bridge/logger/data/throw_ball_palm/: finger_state.npy  muscle_data.npy  muscle_data_cropped.npy  muscle_data_cropped_normalized.npy  muscle_data_normalized.npy
bridge/logger/data/thumb_duo/: finger_state.npy  finger_state_cropped.npy  muscle_data.npy  muscle_data_cropped.npy  muscle_data_cropped_normalized.npy  muscle_data_normalized.npy
bridge/logger/data/thumb_duo_press/: finger_state.npy  muscle_data.npy  muscle_data_cropped.npy  muscle_data_cropped_normalized.npy  muscle_data_normalized.npy
bridge/logger/data/wrist/: finger_state.npy  finger_state_cropped.npy  muscle_data.npy  muscle_data_cropped_normalized.npy  muscle_data_normalized.npy  x.txt
bridge/logger/include/: Sensor.h
bridge/logger/src/: main.cpp
bridge/logger/src/native/: main.cpp
bridge/logger/src/python/: annotate.py  convert.py
bridge/src/native/cpp/: main.cpp
bridge/src/native/include/: EMGSensorArray.h
bridge/src/python/: log_data.py
classifier/: .gitignore  CMakeLists.txt  Dataset.py  Train.py  dataUtils.py  dataset.py  main.py  model.py
classifier/src/: benchmark.cpp
classifier/src/generate/: DatasetConfig.in.h  ModelConfig.in.h
classifier/src/native/: main.cpp
classifier/src/native/cpp/: DoFStateClassifier.cpp  benchmark.cpp  main.cpp
classifier/src/native/include/: Dataset.h  DoFStateClassifier.h  EMGSignalClassifier.h
classifier/src/python/: dataUtils.py  dataset.py  main.py  model.py  trace.py  train.py
dataset/fist/: dataset.pt  muscle_data_cropped.npy  muscle_data_normalized.npy
dataset/index_duo/: dataset.pt  finger_state.npy  finger_state_cropped.npy  muscle_data.npy  muscle_data_normalized.npy
dataset/index_duo_press/: dataset.pt  muscle_data_normalized.npy
dataset/middle_duo/: dataset.pt  muscle_data.npy  muscle_data_cropped.npy  muscle_data_normalized.npy  x.txt
dataset/middle_duo_press/: dataset.pt  muscle_data_normalized.npy  x.txt
dataset/piano_twinkle/: muscle_data_normalized.npy
dataset/pickup_ball_palm/: dataset.pt  muscle_data_normalized.npy  x.txt
dataset/pinkie_duo/: dataset.pt  muscle_data.npy  muscle_data_normalized.npy
dataset/pinkie_duo_press/: dataset.pt  (+1 more)
prosthetic/: .gitignore  CMakeLists.txt  apt_requirements.txt
prosthetic/PCA9685/: CMakeLists.txt
prosthetic/PCA9685/include/: I2CBus.h  PCA9685.h
prosthetic/PCA9685/src/: I2CBus.cpp  PCA9685.cpp
prosthetic/client/: CMakeLists.txt  main.py  reporter.py  test.py
prosthetic/client/src/native/cpp/: main.cpp
prosthetic/client/src/native/include/: ClassifierSocketClient.h
prosthetic/client_python/: main.py
prosthetic/include/: ServoController.h
prosthetic/server/: CMakeLists.txt
prosthetic/server/src/native/cpp/: main.cpp
prosthetic/server/src/native/include/: ProstheticServerSocket.h  ServerProstheticSocket.h  SystemDynamics.h  ThreadSafeCircularBuffer.h  websocket_listener.h  websocket_session.h
prosthetic/server/src/python/: test_client.py
prosthetic/src/native/: main.cpp
prosthetic/standalone/: CMakeLists.txt
prosthetic/standalone/include/: PWMChannel.h  Prosthetic.h  ProstheticServoDriver.h  Servo.h  ServoBonnet.h  TrapezoidalMotionProfile.h
prosthetic/standalone/include/classifier/: EMGDataClassifier.h  NativeMLEMGDataClassifier.h
prosthetic/standalone/include/provider/: EMGDataProvider.h  ReplayEMGDataProvider.h
prosthetic/standalone/src/: PWMChannel.cpp  Prosthetic.cpp  Servo.cpp  ServoBonnet.cpp  TrapezoidalMotionProfile.cpp  main.cpp
(+35 files in other folders)
